Page sections will no longer be colored in the contrast color

--- a/_sass/page_section.scss
+++ b/_sass/page_section.scss
@@ -3,11 +3,6 @@
 	padding-bottom: 20px;
 }
 
-.page-section:nth-child(4n) {
-	background-color: $contrast-color;
-	color: white;
-}
-
 .page-section:nth-child(4n+2) {
 	background-color: $bg-color-1;
 	color: white;
